# CrustyChat

./: README.md
Frontend/: package-lock.json  package.json  proxy.conf.json  tsconfig.json
Frontend/.angular/cache/13.3.0/angular-webpack/12008978b28bfbaf6df5f17b49d4d3d923a08fa7/: 0.pack  10.pack  11.pack  12.pack  13.pack  14.pack  15.pack  16.pack  17.pack  2.pack  3.pack  4.pack  5.pack  6.pack  8.pack  index.pack  index.pack.old
Frontend/.angular/cache/13.3.0/angular-webpack/477a7d26c629d9298fd10bffe3c2f65c2addc3fa/: 0.pack  1.pack  10.pack  11.pack  12.pack  13.pack  14.pack  2.pack  3.pack  4.pack  5.pack  7.pack  8.pack  9.pack  index.pack  index.pack.old
Frontend/src/: styles.css
Frontend/src/app/: app-routing.module.ts  app.component.html  app.module.ts
Frontend/src/app/chatlist/: chatlist.component.css  chatlist.component.html  chatlist.component.ts
Frontend/src/app/chatroom/: chatroom.component.css  chatroom.component.html  chatroom.component.ts
Frontend/src/app/failed/: failed.component.css  failed.component.html
Frontend/src/app/header/: header.component.html  header.component.ts
Frontend/src/app/login/: login.component.css  login.component.html  login.component.ts
Frontend/src/app/register/: register.component.css  register.component.html  register.component.ts
Frontend/src/app/services/: messaging.service.ts
database_storing_service/: Cargo.toml
database_storing_service/src/: get_data.rs  hash.json  hashing.rs  main.rs  replicate.rs  save_data.rs  utils.rs
setup/: app.py  requirements.txt
(+81 files in other folders)
