[package]
name = "database_storing_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json="0.12.4"
hyper = "0.11"
futures = "0.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio-core = "0.1"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.19.2", features = ["full", "rt"] }
actix-cors = "0.6.4"
actix-web = "4.3.1"
redis = "0.22.3"
sha2 = "0.9.5"
hex = "0.4.3"
lazy_static = "1.4.0"
chrono = { version = "0.4.19", features = ["serde"] }


